--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git tutorial</title>
   </head>
   <body>
+    <p>version HTML</p>
     <script src="script.js"></script>
   </body>
 </html>
