--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p>version HTML</p>
+    <!-- Made changes in all the files -->
     <script src="script.js"></script>
   </body>
 </html>
